[package]
name = "sniffer"
version = "0.1.0"
description = "Network packet sniffer with device selection capabilities"
authors = ["Iris Shi <0.0@owo.li>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
pcap = "2.2"
etherparse = "0.18"
anyhow = "1.0"
hex = "0.4"